[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/sound_settings_dialog.gd" id="1"]

[node name="SoundSettingsDialog" type="AcceptDialog"]
title = "Sound Settings"
size = Vector2i(360, 480)
ok_button_text = "Apply"
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 432.0
theme_override_constants/separation = 8

[node name="VolumeLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "SFX Volume"

[node name="VolumeRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VolumeSlider" type="HSlider" parent="VBox/VolumeRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 24)
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="VolumeValue" type="Label" parent="VBox/VolumeRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "100%"

[node name="Sep" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="EventsLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Sound Events"

[node name="ChecksContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4
